--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "vite-number-conversion",
+  "name": "vite-react-template",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "dev": "npx vite --host",
+    "build": "npx vite build",
+    "preview": "npx vite preview",
     "prepare": "husky install"
   },
   "dependencies": {
